# CSC2106-IoT

./: CMakeLists.txt  MQTT-Testing.c  README-Pressure-Weight  README.MD  README.md  pico_sdk_import.cmake
M5Stick/Client/: Client.ino
M5Stick/Server/: Server.ino
MQTT-Testing/: CMakeLists.txt  MQTT-Testing.c  README.MD  pico_sdk_import.cmake
jl_mesh/mesh_client/: mesh_client.ino
jl_mesh/mesh_esp/: mesh_esp.ino
jl_mesh/mesh_main/: mesh_main.ino
mesh_esp/: mesh_esp.ino
project/: CMakeLists.txt  project.c
